--- a/zernovarka/cart_good.html
+++ b/zernovarka/cart_good.html
@@ -7,7 +7,8 @@
 	<title>Главная</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css" />
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css">
-	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&amp;subset=cyrillic" rel="stylesheet">	
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,900&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/smoothproducts.css">		
 </head>
 <body class="loaded">
 
@@ -18,150 +19,62 @@
 
 <!-- BEGIN CONTENT -->
 
-	<main class="content">		
-		<div class="section__1">
+	<main class="content">	
+		<div class="cartgood">
 			<div class="wrapper">
-				<div class="banner">
-					<div class="banner__slide flex">
-						<div class="banner__left">
-							<div class="breadcrumbs">
-								<a href="">Ремонт</a>
-								<a>/</a>
-								<a href="">Аренда кофемашин</a>
-							</div>
-							<h2 class="banner__title">Проффесиональная <br>
-							кофемашина WEGA</h2>
-							<p class="banner__text">Итальянская компания Wega S.r.L. - <br>один из лидеров по производству<br> профессиональных кофемашин на<br> мировом рынке.</p>
-							<button class="btn">ПОДРОБНЕЕ</button>
-						</div>
-						<div class="banner__right">
-							<img src="img/coffe.jpg" alt="">
-						</div>
-					</div>
-					<div class="banner__slide flex">
-						<div class="banner__left">
-							<div class="breadcrumbs">
-								<span>Ремонт</span>
-								<span>/</span>
-								<span>Аренда кофемашин</span>
-							</div>
-							<h2 class="banner__title">Проффесиональная <br>
-							кофемашина WEGA</h2>
-							<p class="banner__text">Итальянская компания Wega S.r.L. - <br>один из лидеров по производству<br> профессиональных кофемашин на<br> мировом рынке.</p>
-							<button class="btn">ПОДРОБНЕЕ</button>
-						</div>
-						<div class="banner__right">
-							<img src="img/coffe.jpg" alt="">
-						</div>
-					</div>
-					<div class="banner__slide flex">
-						<div class="banner__left">
-							<div class="breadcrumbs">
-								<span>Ремонт</span>
-								<span>/</span>
-								<span>Аренда кофемашин</span>
-							</div>
-							<h2 class="banner__title">Проффесиональная <br>
-							кофемашина WEGA</h2>
-							<p class="banner__text">Итальянская компания Wega S.r.L. - <br>один из лидеров по производству<br> профессиональных кофемашин на<br> мировом рынке.</p>
-							<button class="btn">ПОДРОБНЕЕ</button>
-						</div>
-						<div class="banner__right">
-							<img src="img/coffe.jpg" alt="">
-						</div>
-					</div>
+				<div class="breadcrumbs">
+					<a href="" tabindex="0">Ремонт</a>
+					<a tabindex="0">/</a>
+					<a href="" tabindex="0">Каталог запчастей</a>
+					<a tabindex="0">/</a>
+					<a href="" tabindex="0">Холдера</a>
+					<a tabindex="0">/</a>
+					<a href="" tabindex="0">Filterholder For Capsule Segafredo</a>
 				</div>
-				<div class="adva flex">
-					<div class="adva__item flex">
-						<img src="img/adva1.png" alt="">
-						<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
+				<div class="cartgood__cont flex">
+					<div class="cartgood__left flex">
+						<div class="sp-wrap">
+							<a href="img/cartgood.jpg"><img src="img/cartgood.jpg" alt=""></a>
+							<a href="img/cartgood.jpg"><img src="img/cartgood.jpg" alt=""></a>
+							<a href="img/cartgood.jpg"><img src="img/cartgood.jpg" alt=""></a>
+						</div>
 					</div>
-					<div class="adva__item flex">
-						<img src="img/adva2.png" alt="">
-						<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
-					</div>
-					<div class="adva__item flex">
-						<img src="img/adva3.png" alt="">
-						<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
+					<div class="cartgood__right">
+						<h2 class="cartgood__title">Filterholder <br>
+						For Capsule Segafredo</h2>
+						<span class="cartgood__code">Cod. 620924/S</span>
+						<span class="cartgood__available">В наличии</span>
+						<div class="cartgood__currprice flex">
+							<p>589 грн <span>/  23 €</span></p>
+							<div class="cartgood__oldprice">
+								<p>689 грн / 26€</p>
+							</div>
+						</div>
+						<div class="cartgood__sheme flex">
+							<img src="img/sheme.png" alt="">
+							<a href="">Открыть тех-схему</a>
+						</div>
+						<p class="cartgood__desc">
+							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.
+							Ut enim ad minim... <span class="cartgood__more">Еще</span>
+						</p>
+						<p class="cartgood__discount">При покупке данного товара от 10 шт  <span>Скидка 15%</span></p>
+						<div class="cartgood__butts flex">
+						<div class="cartgood__amount flex">
+							<span class="minus flex">–</span>
+							<input type="text" value="12">
+							<span class="plus flex">+</span>
+						</div>
+							<button class="btn btn_comments">добавить в корзину</button>
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>	
-		<div class="section__2">
-				<div class="wrapper">
-					<h2 class="title">Отзывы наших покупателей</h2>
-					<div class="comments flex">
-						<div class="comments__item">
-							<div class="raiting flex">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/star.png" alt="">
-							</div>
-							<p class="comments__text">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-							</p>
-							<div class="comments__user user flex">
-								<div class="user__img flex">
-									<img src="img/face1.png" alt="">
-								</div>
-								<div class="user__info">
-									<h2 class="user__name">Дмитрий</h2>
-									<p class="user__location">Харьков</p>
-								</div>
-							</div>
-						</div>
-						<div class="comments__item">
-							<div class="raiting flex">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/star.png" alt="">
-							</div>
-							<p class="comments__text">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-							</p>
-							<div class="comments__user user flex">
-								<div class="user__img flex">
-									<img src="img/face.png" alt="">
-								</div>
-								<div class="user__info">
-									<h2 class="user__name">Николай</h2>
-									<p class="user__location">Киев</p>
-								</div>
-							</div>
-						</div>
-						<div class="comments__item">
-							<div class="raiting flex">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/y-star.png" alt="">
-								<img src="img/star.png" alt="">
-							</div>
-							<p class="comments__text">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
-							</p>
-							<div class="comments__user user flex">
-								<div class="user__img flex">
-									<img src="img/face2.png" alt="">
-								</div>
-								<div class="user__info">
-									<h2 class="user__name">Светлана</h2>
-									<p class="user__location">Одесса</p>
-								</div>
-							</div>
-						</div>
-					</div>
-					<button class="btn btn_comments">перейти к отзывам</button>
-				</div>
-			</div>	
-		<div class="section__3">
+		<div class="similarnews">
 			<div class="wrapper">
-				<h2 class="title">Новые товары</h2>
-				<div class="newgoods">
+				<h2 class="title">Вас может заинтересовать</h2>
+				<div class="similarnews__slider">
 					<div class="newgoods__item good">
 						<div class="good__img flex">
 							<img src="img/prod1.jpg" alt="">
@@ -247,52 +160,6 @@
 									<img src="img/basket.png" alt="">
 								</div>
 							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="section__4">
-			<div class="wrapper">
-				<div class="recentnews__cont flex">
-					<h2 class="title title_left">Последние новости</h2>
-					<button class="btn btn_news">Все новости</button>
-				</div>
-				<div class="recentnews flex">
-					<div class="recentnews__item">
-						<div class="recentnews__img">
-							<img src="img/news1.jpg" alt="">
-							<button class="btn btn_white">ПОДРОБНЕЕ</button>
-						</div>
-						<div class="recentnews__info">
-							<span class="recentnews__date">12 октября 2017</span>
-							<a href="" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
-sed do eiusmod tempor</a>
-							<p class="recentnews__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
-						</div>
-					</div>
-					<div class="recentnews__item">
-						<div class="recentnews__img">
-							<img src="img/news2.jpg" alt="">
-							<button class="btn btn_white">ПОДРОБНЕЕ</button>
-						</div>
-						<div class="recentnews__info">
-							<span class="recentnews__date">12 октября 2017</span>
-							<a href="" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
-sed do eiusmod tempor incididunt ut labore et dolore</a>
-							<p class="recentnews__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
-						</div>
-					</div>
-					<div class="recentnews__item">
-						<div class="recentnews__img">
-							<img src="img/news3.jpg" alt="">
-							<button class="btn btn_white">ПОДРОБНЕЕ</button>
-						</div>
-						<div class="recentnews__info">
-							<span class="recentnews__date">12 октября 2017</span>
-							<a href="" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
-sed do eiusmod tempor incididunt</a>
-							<p class="recentnews__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
 						</div>
 					</div>
 				</div>
@@ -529,6 +396,7 @@ sed do eiusmod tempor incididunt</a>
 	<script type="text/javascript" src="js/components/jquery.mCustomScrollbar.js" ></script>
 	-->
 	<script type="text/javascript" src="js/components/slick.js" ></script>
+	<script src="js/components/smoothproducts.min.js"></script>
 	<script type="text/javascript" src="js/custom.js" ></script>
 </body>
 </html>
