--- a/bitlab/index.html
+++ b/bitlab/index.html
@@ -5,7 +5,7 @@
 	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="initial-scale=1.0, width=device-width">
 	<title>Главная</title>
-	
+	<link rel="stylesheet" type="text/css" href="css/style.css" />
 </head>
 <body class="loaded">
 
@@ -39,8 +39,10 @@
 				<div class="aboutus__items flex">
 					<div class="aboutus__item aboutus__item_1 wow bounceInLeft" data-wow-duration="1.5s" data-wow-delay="0.5s">
 						<img src="img/ab-line1.png" alt="" class="before wow bounceInLeft bounce" data-wow-duration="1.5s" data-wow-delay="1s">
-						<img src="img/round.png" alt="" class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.7s">
-						<img src="img/round2.png" alt="" class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.4s">
+						<!-- <img src="img/round.png" alt="" class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.7s"> -->
+						<!-- <img src="img/round2.png" alt="" class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.4s"> -->
+						<div class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.7s"></div>
+						<div class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.4s"></div>
 						<div class="aboutus__img flex">
 							<img src="img/about1.png" alt="">
 						</div>
@@ -52,8 +54,10 @@
 					</div>
 					<div class="aboutus__item aboutus__item_2 wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="1.5s">
 						<img src="img/ab-line2.png" alt="" class="before wow bounceInUp" data-wow-duration="1.5s" data-wow-delay="2s">
-						<img src="img/round.png" alt="" class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3s">
-						<img src="img/round2.png" alt="" class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.7s">
+						<!-- <img src="img/round.png" alt="" class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3s">
+						<img src="img/round2.png" alt="" class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.7s"> -->
+						<div class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3s"></div>
+						<div class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="2.7s"></div>
 						<div class="aboutus__img flex">
 							<img src="img/about2.png" alt="">
 						</div>
@@ -65,8 +69,10 @@
 					</div>
 					<div class="aboutus__item aboutus__item_3 wow bounceInRight" data-wow-duration="1.5s" data-wow-delay="1s">
 						<img src="img/ab-line3.png" alt="" class="after wow bounceInRight" data-wow-duration="1.5s" data-wow-delay="1.5s">
-						<img src="img/round.png" alt="" class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3.3s">
-						<img src="img/round2.png" alt="" class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3s">
+						<!-- <img src="img/round.png" alt="" class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3.3s">
+						<img src="img/round2.png" alt="" class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3s"> -->
+						<div class="round1 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3.3s"></div>
+						<div class="round2 wow bounceIn" data-wow-duration="1.5s" data-wow-delay="3.0s"></div>
 						<div class="aboutus__img flex">
 							<img src="img/about3.png" alt="">
 						</div>
@@ -267,7 +273,7 @@
 									</div>
 									<div class="footer__input footer__input_2 flex">
 										<img src="img/fphone.png" alt="">
-										<input type="text" class="phone" class="phone" placeholder="Контактный телефон">
+										<input type="text" class="phone" placeholder="Контактный телефон">
 									</div>
 									<button class="services__buy serv_send_2">отправить</button>
 								</form>
@@ -2676,7 +2682,7 @@
 
 <!-- BODY EOF   -->
 	<noscript id="deferred-styles">
-    	<link rel="stylesheet" type="text/css" href="css/style.css" />	
+    		
 		<link rel="stylesheet" href="css/slick.css">
 		<link rel="stylesheet" href="css/animate.css">
     </noscript>
