--- a/zernovarka/basket.html
+++ b/zernovarka/basket.html
@@ -42,106 +42,122 @@
 				<!-- Tab1 -->
 				<div class="basket basket_1">
 					<div class="basket__row basket__row_title flex">
-						<div class="basket__col basket__col_1">
-							<h2>Товар</h2>
+						<div class="basket_block basket_block_1 flex">
+							<div class="basket__col basket__col_1">
+								<h2>Товар</h2>
+							</div>
+							<div class="basket__col basket__col_2">
+								<h2>Название / Артикул</h2>
+							</div>
 						</div>
-						<div class="basket__col basket__col_2">
-							<h2>Название / Артикул</h2>
-						</div>
-						<div class="basket__col basket__col_3">
-							<h2>Цена</h2>
-						</div>
-						<div class="basket__col basket__col_4">
-							<h2>Количество</h2>
-						</div>
-						<div class="basket__col basket__col_5">
-							<h2>Общая стоимость</h2>
+						<div class="basket_block basket_block_2 flex">
+							<div class="basket__col basket__col_3">
+								<h2>Цена</h2>
+							</div>
+							<div class="basket__col basket__col_4">
+								<h2>Количество</h2>
+							</div>
+							<div class="basket__col basket__col_5">
+								<h2>Общая стоимость</h2>
+							</div>
 						</div>
 						<div class="basket__col basket__col_6">
 							
 						</div>
 					</div>
 					<div class="basket__row flex">
-						<div class="basket__col basket__col_1">
-							<div class="basket__img">
-								<img src="img/basket-prod1.jpg" alt="">
+						<div class="basket_block basket_block_1 flex">
+							<div class="basket__col basket__col_1">
+								<div class="basket__img">
+									<img src="img/basket-prod1.jpg" alt="">
+								</div>
+							</div>
+							<div class="basket__col basket__col_2">
+								<h3 class="basket__name">FILTERHOLDER FOR <br>
+								CAPSULE SEGAFREDO</h3>
+								<p class="basket__code">Cod. 620924/S</p>
 							</div>
 						</div>
-						<div class="basket__col basket__col_2">
-							<h3 class="basket__name">FILTERHOLDER FOR <br>
-							CAPSULE SEGAFREDO</h3>
-							<p class="basket__code">Cod. 620924/S</p>
-						</div>
-						<div class="basket__col basket__col_3">
-							<p class="basket__price">589 грн</p>
-						</div>
-						<div class="basket__col basket__col_4">
-							<div class="cartgood__amount flex">
-								<span class="minus flex">–</span>
-								<input type="text" value="12">
-							<span class="plus flex">+</span>
-						</div>
-						</div>
-						<div class="basket__col basket__col_5">
-							<p class="basket__price">12 346 грн</p>
-							<p class="basket__oldprice">12 980 грн</p>
-						</div>
+						<div class="basket_block basket_block_2 flex">	
+							<div class="basket__col basket__col_3">
+								<p class="basket__price">589 грн</p>
+							</div>
+							<div class="basket__col basket__col_4">
+								<div class="cartgood__amount flex">
+									<span class="minus flex">–</span>
+									<input type="text" value="12">
+								<span class="plus flex">+</span>
+							</div>
+							</div>
+							<div class="basket__col basket__col_5">
+								<p class="basket__price">12 346 грн</p>
+								<p class="basket__oldprice">12 980 грн</p>
+							</div>
+						</div>	
 						<div class="basket__col basket__col_6">
 							<img class="basket__remove" src="img/cart.png" alt="">
 						</div>
 					</div>
 					<div class="basket__row flex">
-						<div class="basket__col basket__col_1">
-							<div class="basket__img">
-								<img src="img/basket-prod2.jpg" alt="">
+						<div class="basket_block basket_block_1 flex">
+							<div class="basket__col basket__col_1">
+								<div class="basket__img">
+									<img src="img/basket-prod2.jpg" alt="">
+								</div>
+							</div>
+							<div class="basket__col basket__col_2">
+								<h3 class="basket__name">COMPLETE STEAM/WATER <br>
+								VALVE THREAD 4mm</h3>
+								<p class="basket__code">Cod. 700892</p>
 							</div>
 						</div>
-						<div class="basket__col basket__col_2">
-							<h3 class="basket__name">COMPLETE STEAM/WATER <br>
-							VALVE THREAD 4mm</h3>
-							<p class="basket__code">Cod. 700892</p>
-						</div>
-						<div class="basket__col basket__col_3">
-							<p class="basket__price">49 грн</p>
-						</div>
-						<div class="basket__col basket__col_4">
-							<div class="cartgood__amount flex">
-								<span class="minus flex">–</span>
-								<input type="text" value="2">
-							<span class="plus flex">+</span>
-						</div>
-						</div>
-						<div class="basket__col basket__col_5">
-							<p class="basket__price">98 грн</p>
-						</div>
+						<div class="basket_block basket_block_2 flex">	
+							<div class="basket__col basket__col_3">
+								<p class="basket__price">49 грн</p>
+							</div>
+							<div class="basket__col basket__col_4">
+								<div class="cartgood__amount flex">
+									<span class="minus flex">–</span>
+									<input type="text" value="2">
+								<span class="plus flex">+</span>
+							</div>
+							</div>
+							<div class="basket__col basket__col_5">
+								<p class="basket__price">98 грн</p>
+							</div>
+						</div>	
 						<div class="basket__col basket__col_6">
 							<img class="basket__remove" src="img/cart.png" alt="">
 						</div>
 					</div>
 					<div class="basket__row flex">
-						<div class="basket__col basket__col_1">
-							<div class="basket__img">
-								<img src="img/basket-prod3.jpg" alt="">
+						<div class="basket_block basket_block_1 flex">
+							<div class="basket__col basket__col_1">
+								<div class="basket__img">
+									<img src="img/basket-prod3.jpg" alt="">
+								</div>
+							</div>
+							<div class="basket__col basket__col_2">
+								<h3 class="basket__name">COFFEE DISTRIB. <br>
+								"TWISTER" BLACK</h3>
+								<p class="basket__code">Cod. 620287</p>
 							</div>
 						</div>
-						<div class="basket__col basket__col_2">
-							<h3 class="basket__name">COFFEE DISTRIB. <br>
-							"TWISTER" BLACK</h3>
-							<p class="basket__code">Cod. 620287</p>
-						</div>
-						<div class="basket__col basket__col_3">
-							<p class="basket__price">1 359 грн</p>
-						</div>
-						<div class="basket__col basket__col_4">
-							<div class="cartgood__amount flex">
-								<span class="minus flex">–</span>
-								<input type="text" value="1">
-							<span class="plus flex">+</span>
-						</div>
-						</div>
-						<div class="basket__col basket__col_5">
-							<p class="basket__price">1 359 грн</p>
-						</div>
+						<div class="basket_block basket_block_2 flex">	
+							<div class="basket__col basket__col_3">
+								<p class="basket__price">1 359 грн</p>
+							</div>
+							<div class="basket__col basket__col_4">
+								<div class="cartgood__amount flex">
+									<span class="minus flex">–</span>
+									<input type="text" value="1">
+								<span class="plus flex">+</span>
+							</div>
+							</div>
+							<div class="basket__col basket__col_5">
+								<p class="basket__price">1 359 грн</p>
+							</div>
+						</div>	
 						<div class="basket__col basket__col_6">
 							<img class="basket__remove" src="img/cart.png" alt="">
 						</div>
