--- a/zernovarka/index.html
+++ b/zernovarka/index.html
@@ -431,9 +431,87 @@ sed do eiusmod tempor incididunt</a>
 			<div class="wrapper flex">
 				<nav class="header__bottnav">
 					<ul class="flex">
-						<li class="toggle"><a href="" class="active">Каталог запчастей</a></li>
-						<li><a href="" class="active">Кофемашины / кофемолки</a></li>
-						<li><a href="" class="active">Товары для HoReCa</a></li>
+						<li class="toggle">
+							<a href="" class="active">Каталог запчастей</a>
+							<div class="dropdown flex">
+								<ul>
+									<li><a href="">Аксессуары</a></li>
+									<li><a href="">Манометры </a></li>
+									<li><a href="">Холдера</a></li>
+									<li><a href="">Помпы и двигателя</a></li>
+									<li><a href="">Электромагнитные клапана</a></li>
+									<li><a href="">Тэны</a></li>
+									<li><a href="">Уплотнительные кольца группы</a></li>
+									<li><a href="">Прокладки</a></li>
+									<li><a href="">Резинки</a></li>
+								</ul>
+								<ul>
+									<li><a href="">Жернова для кофемолок</a></li>
+									<li><a href="">Газовое оборудование</a></li>
+									<li><a href="">Кнопки</a></li>
+									<li><a href="">Ручки и краны</a></li>
+									<li><a href="">Блоки управления</a></li>
+									<li><a href="">Стекла уровня</a></li>
+									<li><a href="">Фитинги, жиклеры</a></li>
+									<li><a href="">Смягчители воды</a></li>
+									<li><a href="">Предохранительные клапаны</a></li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<a href="" class="active">Кофемашины / кофемолки</a>
+							<div class="dropdown flex">
+								<div class="dropdown__left">
+									<h2>Кофемашины</h2>
+									<a>Профессиональные <br>
+									кофемашины</a>
+									<a>Профессиональные <br>
+									кофемашины Б/У</a>
+								</div>
+								<div class="dropdown__right">
+									<h2>Кофемолки</h2>
+									<a>Профессиональные <br>
+									кофемолки</a>
+									<a>Профессиональные <br>
+									кофемолки Б/У</a>
+								</div>
+							</div>
+						</li>
+						<li>
+							<a href="" class="active">Товары для HoReCa</a>
+							<div class="dropdown flex">
+								<div class="dropdown__left dropdown__left_2">
+									<h2>Кофе</h2>
+									<a>Зерновой</a>
+									<a>Молотый</a>
+									<a>250г</a>
+									<a>500г</a>
+									<a>1кг</a>
+									<h2 class="title2">Чай</h2>
+									<a>Листовой</a>
+									<a>Пакетированный</a>
+								</div>
+								<div class="dropdown__right dropdown__right_2">
+									<a>Сиропы и топпинги</a>
+									<a>Горячий шоколад</a>
+									<a>Какао</a>
+									<a>Крышки</a>
+									<a>Сопутствующие товары</a>
+									<a>Аксессуары</a>
+									<h2 class="title3">Бумажные стаканы</h2>
+									<div class="dropdown__box">
+										<a>110мл</a>
+										<a>275мл</a>
+										<a>400мл</a>
+									</div>
+									<div class="dropdown__box">
+										<a>175мл</a>
+										<a>340мл</a>
+										<a>500мл</a>
+									</div>
+								</div>
+							</div>
+						</li>
 						<li><a href="">Ремонт / Аренда кофемашин</a></li>
 					</ul>
 				</nav>
