--- a/zernovarka/brands.html
+++ b/zernovarka/brands.html
@@ -122,19 +122,19 @@
 			<div class="wrapper flex">
 				<nav class="header__topnav">
 					<ul class="flex">
-						<li><a href="">О нас</a></li>
-						<li><a href="">Сотрудничество</a></li>
-						<li><a href="">Доставка и оплата</a></li>
-						<li><a href="">Новости</a></li>
-						<li><a href="">Отзывы</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="info1.html">О нас</a></li>
+						<li><a href="info2.html">Сотрудничество</a></li>
+						<li><a href="info3.html">Доставка и оплата</a></li>
+						<li><a href="news2.html">Новости</a></li>
+						<li><a href="testimonials.html">Отзывы</a></li>
+						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
 				<div class="header__topright flex">
 					<nav class="header__topnav">
 						<ul class="flex">
-							<li><a href="">Технические схемы</a></li>
-							<li><a href="">Бренды</a></li>
+							<li><a href="tech.html">Технические схемы</a></li>
+							<li><a href="brands.html">Бренды</a></li>
 						</ul>
 					</nav>
 					<div class="currency">
@@ -147,7 +147,7 @@
 		</div>
 		<div class="header__main">
 			<div class="wrapper flex">
-				<a href="" class="logo">
+				<a href="index.html" class="logo">
 					<img src="img/logo.png" alt="">
 				</a>
 				<div class="callback flex">
@@ -166,7 +166,7 @@
 					</div>
 					<div class="header__cartinfo">
 						<p>Товаров в корзине:</p>
-						<span><a href="">12 шт </a>на сумму: 12 345 грн</span>
+						<span><a href="basket.html">12 шт </a>на сумму: 12 345 грн</span>
 					</div>
 				</div>
 			</div>
@@ -175,9 +175,87 @@
 			<div class="wrapper flex">
 				<nav class="header__bottnav">
 					<ul class="flex">
-						<li class="toggle"><a href="" class="active">Каталог запчастей</a></li>
-						<li><a href="" class="active">Кофемашины / кофемолки</a></li>
-						<li><a href="" class="active">Товары для HoReCa</a></li>
+						<li class="toggle">
+							<a href="mainnav.html" class="active">Каталог запчастей</a>
+							<div class="dropdown flex">
+								<ul>
+									<li><a href="">Аксессуары</a></li>
+									<li><a href="">Манометры </a></li>
+									<li><a href="">Холдера</a></li>
+									<li><a href="">Помпы и двигателя</a></li>
+									<li><a href="">Электромагнитные клапана</a></li>
+									<li><a href="">Тэны</a></li>
+									<li><a href="">Уплотнительные кольца группы</a></li>
+									<li><a href="">Прокладки</a></li>
+									<li><a href="">Резинки</a></li>
+								</ul>
+								<ul>
+									<li><a href="">Жернова для кофемолок</a></li>
+									<li><a href="">Газовое оборудование</a></li>
+									<li><a href="">Кнопки</a></li>
+									<li><a href="">Ручки и краны</a></li>
+									<li><a href="">Блоки управления</a></li>
+									<li><a href="">Стекла уровня</a></li>
+									<li><a href="">Фитинги, жиклеры</a></li>
+									<li><a href="">Смягчители воды</a></li>
+									<li><a href="">Предохранительные клапаны</a></li>
+								</ul>
+							</div>
+						</li>
+						<li>
+							<a href="mainnav2.html" class="active">Кофемашины / кофемолки</a>
+							<div class="dropdown flex">
+								<div class="dropdown__left">
+									<h2>Кофемашины</h2>
+									<a>Профессиональные <br>
+									кофемашины</a>
+									<a>Профессиональные <br>
+									кофемашины Б/У</a>
+								</div>
+								<div class="dropdown__right">
+									<h2>Кофемолки</h2>
+									<a>Профессиональные <br>
+									кофемолки</a>
+									<a>Профессиональные <br>
+									кофемолки Б/У</a>
+								</div>
+							</div>
+						</li>
+						<li>
+							<a href="mainnav3.html" class="active">Товары для HoReCa</a>
+							<div class="dropdown flex">
+								<div class="dropdown__left dropdown__left_2">
+									<h2>Кофе</h2>
+									<a>Зерновой</a>
+									<a>Молотый</a>
+									<a>250г</a>
+									<a>500г</a>
+									<a>1кг</a>
+									<h2 class="title2">Чай</h2>
+									<a>Листовой</a>
+									<a>Пакетированный</a>
+								</div>
+								<div class="dropdown__right dropdown__right_2">
+									<a>Сиропы и топпинги</a>
+									<a>Горячий шоколад</a>
+									<a>Какао</a>
+									<a>Крышки</a>
+									<a>Сопутствующие товары</a>
+									<a>Аксессуары</a>
+									<h2 class="title3">Бумажные стаканы</h2>
+									<div class="dropdown__box">
+										<a>110мл</a>
+										<a>275мл</a>
+										<a>400мл</a>
+									</div>
+									<div class="dropdown__box">
+										<a>175мл</a>
+										<a>340мл</a>
+										<a>500мл</a>
+									</div>
+								</div>
+							</div>
+						</li>
 						<li><a href="">Ремонт / Аренда кофемашин</a></li>
 					</ul>
 				</nav>
@@ -202,7 +280,7 @@
 		<div class="footer__top">
 			<div class="wrapper flex">
 				<div class="footer__main">
-					<a href="" class="logo">
+					<a href="index.html" class="logo">
 						<img src="img/flogo.png" alt="">
 					</a>
 					<p>
