--- a/zernovarka/index.html
+++ b/zernovarka/index.html
@@ -168,8 +168,8 @@
 						</div>
 						<div class="good__info">
 							<h3 class="good__category">Газовое оборудование</h3>
-							<h2 class="good__title">GAS BURNER <br>
-							GROUP 2GR. RANCILIO</h2>
+							<a href="cart_good.html" class="good__title">GAS BURNER <br>
+							GROUP 2GR. RANCILIO</a>
 							<p class="good__code">Cod. 592004</p>
 							<div class="good__bottom flex">
 								<span class="good__price">230 грн</span>
@@ -185,9 +185,9 @@
 						</div>
 						<div class="good__info">
 							<h3 class="good__category">Холдеры</h3>
-							<h2 class="good__title">FILTERHOLDER FOR <br>
+							<a href="cart_good.html" class="good__title">FILTERHOLDER FOR <br>
 							CAPSULE SEGAFREDO
-							</h2>
+							</a>
 							<p class="good__code">Cod. 620924/S</p>
 							<div class="good__bottom flex">
 								<span class="good__price">589 грн</span>
@@ -203,8 +203,8 @@
 						</div>
 						<div class="good__info">
 							<h3 class="good__category">Ручки и краны</h3>
-							<h2 class="good__title">COMPLETE STEAM/WATER<br> 
-							VALVE THREAD 4mm</h2>
+							<a href="cart_good.html" class="good__title">COMPLETE STEAM/WATER<br> 
+							VALVE THREAD 4mm</a>
 							<p class="good__code">Cod. 700892</p>
 							<div class="good__bottom flex">
 								<span class="good__price">49 грн</span>
@@ -237,9 +237,9 @@
 						</div>
 						<div class="good__info">
 							<h3 class="good__category">Холдеры</h3>
-							<h2 class="good__title">FILTERHOLDER FOR <br>
+							<a href="cart_good.html" class="good__title">FILTERHOLDER FOR <br>
 							CAPSULE SEGAFREDO
-							</h2>
+							</a>
 							<p class="good__code">Cod. 620924/S</p>
 							<div class="good__bottom flex">
 								<span class="good__price">589 грн</span>
@@ -266,7 +266,7 @@
 						</div>
 						<div class="recentnews__info">
 							<span class="recentnews__date">12 октября 2017</span>
-							<a href="" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
+							<a href="news.html" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
 sed do eiusmod tempor</a>
 							<p class="recentnews__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
 						</div>
@@ -278,7 +278,7 @@ sed do eiusmod tempor</a>
 						</div>
 						<div class="recentnews__info">
 							<span class="recentnews__date">12 октября 2017</span>
-							<a href="" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
+							<a href="news.html" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
 sed do eiusmod tempor incididunt ut labore et dolore</a>
 							<p class="recentnews__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
 						</div>
@@ -290,7 +290,7 @@ sed do eiusmod tempor incididunt ut labore et dolore</a>
 						</div>
 						<div class="recentnews__info">
 							<span class="recentnews__date">12 октября 2017</span>
-							<a href="" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
+							<a href="news.html" class="recentnews__title">Lorem ipsum dolor sit amet, consectetur adipisicing, 
 sed do eiusmod tempor incididunt</a>
 							<p class="recentnews__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</p>
 						</div>
@@ -378,19 +378,19 @@ sed do eiusmod tempor incididunt</a>
 			<div class="wrapper flex">
 				<nav class="header__topnav">
 					<ul class="flex">
-						<li><a href="">О нас</a></li>
-						<li><a href="">Сотрудничество</a></li>
-						<li><a href="">Доставка и оплата</a></li>
-						<li><a href="">Новости</a></li>
-						<li><a href="">Отзывы</a></li>
-						<li><a href="">Контакты</a></li>
+						<li><a href="info1.html">О нас</a></li>
+						<li><a href="info2.html">Сотрудничество</a></li>
+						<li><a href="info3.html">Доставка и оплата</a></li>
+						<li><a href="news2.html">Новости</a></li>
+						<li><a href="testimonials.html">Отзывы</a></li>
+						<li><a href="contacts.html">Контакты</a></li>
 					</ul>
 				</nav>
 				<div class="header__topright flex">
 					<nav class="header__topnav">
 						<ul class="flex">
-							<li><a href="">Технические схемы</a></li>
-							<li><a href="">Бренды</a></li>
+							<li><a href="tech.html">Технические схемы</a></li>
+							<li><a href="brands.html">Бренды</a></li>
 						</ul>
 					</nav>
 					<div class="currency">
@@ -403,7 +403,7 @@ sed do eiusmod tempor incididunt</a>
 		</div>
 		<div class="header__main">
 			<div class="wrapper flex">
-				<a href="" class="logo">
+				<a href="index.html" class="logo">
 					<img src="img/logo.png" alt="">
 				</a>
 				<div class="callback flex">
@@ -422,7 +422,7 @@ sed do eiusmod tempor incididunt</a>
 					</div>
 					<div class="header__cartinfo">
 						<p>Товаров в корзине:</p>
-						<span><a href="">12 шт </a>на сумму: 12 345 грн</span>
+						<span><a href="basket.html">12 шт </a>на сумму: 12 345 грн</span>
 					</div>
 				</div>
 			</div>
@@ -432,7 +432,7 @@ sed do eiusmod tempor incididunt</a>
 				<nav class="header__bottnav">
 					<ul class="flex">
 						<li class="toggle">
-							<a href="" class="active">Каталог запчастей</a>
+							<a href="mainnav.html" class="active">Каталог запчастей</a>
 							<div class="dropdown flex">
 								<ul>
 									<li><a href="">Аксессуары</a></li>
@@ -459,7 +459,7 @@ sed do eiusmod tempor incididunt</a>
 							</div>
 						</li>
 						<li>
-							<a href="" class="active">Кофемашины / кофемолки</a>
+							<a href="mainnav2.html" class="active">Кофемашины / кофемолки</a>
 							<div class="dropdown flex">
 								<div class="dropdown__left">
 									<h2>Кофемашины</h2>
@@ -478,7 +478,7 @@ sed do eiusmod tempor incididunt</a>
 							</div>
 						</li>
 						<li>
-							<a href="" class="active">Товары для HoReCa</a>
+							<a href="mainnav3.html" class="active">Товары для HoReCa</a>
 							<div class="dropdown flex">
 								<div class="dropdown__left dropdown__left_2">
 									<h2>Кофе</h2>
