--- a/zernovarka/index.html
+++ b/zernovarka/index.html
@@ -410,7 +410,11 @@ sed do eiusmod tempor incididunt</a>
 					<button class="call">Заказать обратный звонок</button>
 					<div class="info">
 						<p>Пн. - Пт. с 9:00 - 19:00</p>
-						<a href="+380931111111">+38 093 <span>111-11-11</span></a>
+						<div class="phones">
+							<a class="first" href="+380931111111">+38 093 <span>111-11-11</span></a>
+							<a class="second" href="+380931111111">+38 093 <span>111-11-11</span></a>
+							<a class="third" href="+380931111111">+38 093 <span>111-11-11</span></a>
+						</div>
 					</div>
 					<div class="callback__icon flex">
 						<img src="img/phone.png" alt="">
