--- a/zernovarka/news2.html
+++ b/zernovarka/news2.html
@@ -101,6 +101,7 @@ sed do eiusmod tempor incididunt</a>
 					</div>
 				</div>
 			</div>
+			<button class="btn btn_testim">больше отзывов</button>
 		</div>
 		<!--Modal window-->
 		<div class="modal-form modal-call">
