--- a/zernovarka/mainnav.html
+++ b/zernovarka/mainnav.html
@@ -660,6 +660,42 @@
 				</div>
 			</div>
 		</div>
+		<div class="section__5 section__5_w">
+			<div class="wrapper">
+				<div class="brand__slider">
+					<div class="brand__slide brand__slide_1 flex">
+						<img src="img/brand1.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_2 flex">
+						<img src="img/brand2.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_3 flex">
+						<img src="img/brand3.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_4 flex">
+						<img src="img/brand4.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_5 flex">
+						<img src="img/brand5.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_1 flex">
+						<img src="img/brand1.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_2 flex">
+						<img src="img/brand2.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_3 flex">
+						<img src="img/brand3.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_4 flex">
+						<img src="img/brand4.png" alt="">
+					</div>
+					<div class="brand__slide brand__slide_5 flex">
+						<img src="img/brand5.png" alt="">
+					</div>
+				</div>
+			</div>
+		</div>
 		<!--Modal window-->
 		<div class="modal-form modal-call">
 			<h2>Заказать обратный <br> звонок</h2>
