--- a/zernovarka/remont.html
+++ b/zernovarka/remont.html
@@ -19,7 +19,7 @@
 <!-- BEGIN CONTENT -->
 
 	<main class="content">		
-		<div class="title_page">
+		<!-- <div class="title_page">
 			<div class="wrapper flex">
 				<h2>Кофемашины / кофемолки</h2>
 				<div class="title__butts">
@@ -27,145 +27,8 @@
 					<button class="title__butt title__butt_2">Сортировать</button>
 				</div>
 			</div>
-		</div>
-		<div class="filter filter_2">
-			<div class="wrapper flex">
-				<div class="filter__box filter__box_2">
-					<h2 class="filter__title">Кофемашины</h2>
-					<div class="filter__item">
-						<input id="filter42" type="checkbox" class="filterinput">
-						<label for="filter42" class="filterlabel">Профессиональные <br>
-						кофемашины</label>
-					</div>
-					<div class="filter__item">
-						<input id="filter43" type="checkbox" class="filterinput">
-						<label for="filter43" class="filterlabel">Профессиональные <br>
-						кофемашины Б/У</label>
-					</div>
-					<h2 class="filter__title filter__title_2">Кофемолки</h2>
-					<div class="filter__item">
-						<input id="filter44" type="checkbox" class="filterinput">
-						<label for="filter44" class="filterlabel">Профессиональные <br>
-						кофемолки</label>
-					</div>
-					<div class="filter__item">
-						<input id="filter45" type="checkbox" class="filterinput">
-						<label for="filter45" class="filterlabel">Профессиональные <br>
-						кофемолки Б/У</label>
-					</div>
-				</div>
-				<div class="filter__box filter__box_3">
-					<h2 class="filter__title">Бренды</h2>
-					<div class="filter__box filter__box_scroll">
-						<div class="filter__item">
-							<input id="ffilter1" type="checkbox" class="filterinput">
-							<label for="ffilter1" class="filterlabel">Casadio</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter2" type="checkbox" class="filterinput">
-							<label for="ffilter2" class="filterlabel">Cunill</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter3" type="checkbox" class="filterinput">
-							<label for="ffilter3" class="filterlabel">Astoria</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter4" type="checkbox" class="filterinput">
-							<label for="ffilter4" class="filterlabel">Bezzera</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter5" type="checkbox" class="filterinput">
-							<label for="ffilter5" class="filterlabel">Brasilia</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter6" type="checkbox" class="filterinput">
-							<label for="ffilter6" class="filterlabel">Carimali</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter7" type="checkbox" class="filterinput">
-							<label for="ffilter7" class="filterlabel">Elektra</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter8" type="checkbox" class="filterinput">
-							<label for="ffilter8" class="filterlabel">Fiorenzato</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter9" type="checkbox" class="filterinput">
-							<label for="ffilter9" class="filterlabel">La Marzocco</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter10" type="checkbox" class="filterinput">
-							<label for="ffilter10" class="filterlabel">Faema</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter11" type="checkbox" class="filterinput">
-							<label for="ffilter11" class="filterlabel">Casadio</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter12" type="checkbox" class="filterinput">
-							<label for="ffilter12" class="filterlabel">Cunill</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter13" type="checkbox" class="filterinput">
-							<label for="ffilter13" class="filterlabel">Astoria</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter14" type="checkbox" class="filterinput">
-							<label for="ffilter14" class="filterlabel">Bezzera</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter15" type="checkbox" class="filterinput">
-							<label for="ffilter15" class="filterlabel">Brasilia</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter16" type="checkbox" class="filterinput">
-							<label for="ffilter16" class="filterlabel">Carimali</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter17" type="checkbox" class="filterinput">
-							<label for="ffilter17" class="filterlabel">Elektra</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter18" type="checkbox" class="filterinput">
-							<label for="ffilter18" class="filterlabel">Fiorenzato</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter19" type="checkbox" class="filterinput">
-							<label for="ffilter19" class="filterlabel">La Marzocco</label>
-						</div>
-						<div class="filter__item">
-							<input id="ffilter20" type="checkbox" class="filterinput">
-							<label for="ffilter20" class="filterlabel">Faema</label>
-						</div>
-					</div>
-				</div>
-				<div class="filter__box filter__box_4">
-					<h2 class="filter__title filter__title_3">Цена</h2>
-					<div class="filter__row flex">
-						<div class="filter__input flex">
-							<span>от</span>
-							<input type="text" placeholder="0">
-						</div>
-						<span class="filter__currency">UAH</span>
-					</div>
-					<div class="filter__row flex">
-						<div class="filter__input flex">
-							<span>до</span>
-							<input type="text" value="10 000">
-						</div>
-						<span class="filter__currency">UAH</span>
-					</div>
-					<div class="filter__amount">
-						<p><span>1 578 </span>Товаров</p>
-					</div>
-					<div class="filter__butts flex">
-						<button class="btn filter__butt_1">Сбросить</button>
-						<button class="btn filter__butt_2">ПРИМЕНИТЬ</button>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="sortby">
+		</div> -->
+		<!-- <div class="sortby">
 			<div class="wrapper flex">
 				<div class="filter__box filter__box_6">
 					<h2 class="filter__title">Сортировать по:</h2>
@@ -203,10 +66,236 @@
 					<button class="btn filter__butt_2">ПРИМЕНИТЬ</button>
 				</div>
 			</div>
-		</div>
-		<div class="mainnav">
+		</div> -->
+		<div class="mainnav mainnav_2">
 			<div class="wrapper">
-				
+				<div class="mainnav__block flex">
+					<div class="mainnav__left">
+						<h2 class="mainnav__title">Ремонт кофемашин</h2>
+						<p class="mainnav__text">
+							Zernovarka - это компания которая специализируется на профессиональном ремонте кофемашин любой сложности. Наша специалисты имеют большой опыт в этой сфере, что даст возможность быстро и качественно решить Вашу проблему. Мы предоставляем большой спектр услуг как: сервисное обслуживание, полная чистка (декальцинация), покраска, полировка, настройка кофейного оборудования.
+						</p>
+						<div class="mainnav__adva flex">
+							<img src="img/mainnav1.png" alt="">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+						</div>
+						<div class="mainnav__adva flex">
+							<img src="img/mainnav2.png" alt="">
+							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore</p>
+						</div>
+					</div>
+					<div class="mainnav__right">
+						<div class="modal-form modal-mainnav">
+							<h2>Оформить заявку 
+							<br> на консультацию специалиста</h2>
+							<form action="">
+								<div class="modal__input">
+									<input type="text" placeholder="Ваше имя">
+								</div>
+								<div class="modal__input modal__input_2">
+									<input type="text" placeholder="097-777-77-77">
+								</div>
+								<div class="modal__input modal__input_submit">
+									<input class="btn btn_send2" type="submit" placeholder="ОТПРАВИТЬ">
+								</div>
+							</form>
+							<p>Оставьте свои контакты, и менеджер <br>
+							перезвонит вам в течение 10 минут</p>
+						</div>
+						<div class="modal-form modal-success2">
+							<div class="modal__cont flex">
+								<div class="modal__icon flex">
+									<img src="img/check.png" alt="">
+								</div>
+								<h3>Ваши данные <br>
+								успешно отправлены!</h3>
+								<p>В течении 10 минут с вами <br>
+				 				свяжится наш менеждер</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="mainnav__block">
+					<h2 class="mainnav__title">Аренда кофемашин</h2>
+					<p class="mainnav__text">
+						Наша компания предоставляет в аренду профессиональные кофемашини многих мировых итальянских брендов. Все оборудование перед установкой проходит сервисное обслуживание и полностью готово к работе.  Мы подберем лучший вариант по Вашему запросу. Все позиции аренды предоставлены в нашем каталоге. Вы можете оставить заявку для получения подробной информации. Будем рады сотрудничеству.
+					</p>
+					<div class="mainnav__tabs flex">
+						<div class="mainnav__tab">
+							<span>ДЛЯ ОФИСА</span>	
+						</div>
+						<div class="mainnav__tab mainnav__tab_active">
+							<span>ДЛЯ КОФЕЙНИ</span>
+						</div>
+						<div class="mainnav__tab">
+							<span>ДЛЯ МАГАЗИНА</span>
+						</div>
+					</div>
+					<div class="mainnav__info">
+						<p class="mainnav__text">
+						Профессиональные рожковые кофемашины
+						</p>
+						<p class="mainnav__p">- Подготовленное оборудование не старше 2009 года</p>
+						<p class="mainnav__p">- Бесплатное обслуживание раз в месяц</p>
+						<p class="mainnav__p">- В случае ремонта замена кофемашины на аналогичную </p>
+					</div>
+					<div class="coffemach flex">
+						<div class="coffemach__main">
+							<div class="coffemach__item flex">
+								<div class="coffemach__img flex">
+									<img src="img/cm1.jpg" alt="">
+								</div>
+								<div class="coffemach__info">
+									<p class="coffemach__subtitle">Профессиональная 
+									кофемашина</p>
+									<h2 class="coffemach__title">
+										La Cimbali <br>
+										M 24
+									</h2>
+									<p class="coffemach__price">589 грн</p>
+									<button class="btn">Характеристики</button>
+								</div>
+							</div>
+						</div>
+						<div class="coffemach__main">
+							<div class="coffemach__item flex">
+								<div class="coffemach__img flex">
+									<img src="img/cm2.jpg" alt="">
+								</div>
+								<div class="coffemach__info">
+									<p class="coffemach__subtitle">Профессиональная 
+									кофемашина</p>
+									<h2 class="coffemach__title">
+										Faema <br>
+										E91 Ambassador
+									</h2>
+									<p class="coffemach__price">1 450 грн</p>
+									<button class="btn">Характеристики</button>
+								</div>
+							</div>
+						</div>
+						<div class="coffemach__main">
+							<div class="coffemach__item flex">
+								<div class="coffemach__img flex">
+									<img src="img/cm3.jpg" alt="">
+								</div>
+								<div class="coffemach__info">
+									<p class="coffemach__subtitle">Профессиональная 
+									кофемашина</p>
+									<h2 class="coffemach__title">
+										La Cimbali<br>
+										M 34
+									</h2>
+									<p class="coffemach__price">2 470 грн</p>
+									<button class="btn">Характеристики</button>
+								</div>
+							</div>
+							<div class="coffemach__full flex">
+								<div class="coffemach__close flex">
+									<img src="img/close.png" alt="">
+								</div>
+								<div class="coffemach__img2 flex">
+									<img src="img/cm3.jpg" alt="">
+								</div>
+								<div class="coffemach__info2">
+									<p class="coffemach__subtitle">Профессиональная 
+									кофемашина</p>
+									<div class="coffemach__row flex">
+										<h2 class="coffemach__title coffemach__title_2">
+										La Cimbali M 34
+										</h2>
+										<p class="coffemach__price  coffemach__price_2">2 470 грн</p>
+									</div>
+									<h2 class="coffemach__title coffemach__title_3">
+									Характеристики:
+									</h2>
+									<div class="coffemach__char flex">
+										<ul>
+											<li><a href="">Тактовое управление;</a></li>
+											<li><a href="">Для молотого кофе;</a></li>
+											<li><a href="">2 группы подачи кофе;</a></li>
+											<li><a href="">Установка размера порций;</a></li>
+											<li><a href="">Электроподогрев чашек;</a></li>
+											<li><a href="">2 манометра;</a></li>
+										</ul>
+										<ul>
+											<li><a href="">Давления пара в бойлере;</a></li>
+											<li><a href="">Объем - 10 литров;</a></li>
+											<li><a href="">Давление помпы - 9 бар;</a></li>
+											<li><a href="">Мощность - 3500 Вт;</a></li>
+											<li><a href="">Страна-производитель - Италия</a></li>
+										</ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="coffemach__main">
+							<div class="coffemach__item flex">
+								<div class="coffemach__img flex">
+									<img src="img/cm4.jpg" alt="">
+								</div>
+								<div class="coffemach__info">
+									<p class="coffemach__subtitle">Профессиональная 
+									кофемашина</p>
+									<h2 class="coffemach__title">
+										Sanremo Verona<br>
+										TCS 3GR
+									</h2>
+									<p class="coffemach__price">980 грн</p>
+									<button class="btn">Характеристики</button>
+								</div>
+							</div>
+						</div>
+						<div class="coffemach__main">
+							<div class="coffemach__item flex">
+								<div class="coffemach__img flex">
+									<img src="img/cm5.jpg" alt="">
+								</div>
+								<div class="coffemach__info">
+									<p class="coffemach__subtitle">Профессиональная 
+									кофемашина</p>
+									<h2 class="coffemach__title">
+										La Cimbali<br>
+										M 27 RE
+									</h2>
+									<p class="coffemach__price">1260 грн</p>
+									<button class="btn">Характеристики</button>
+								</div>
+							</div>
+						</div>
+						<div class="coffemach__main">
+							<div class="coffemach__item flex">
+								<div class="coffemach__img flex">
+									<img src="img/cm6.jpg" alt="">
+								</div>
+								<div class="coffemach__info">
+									<p class="coffemach__subtitle">Профессиональная 
+									кофемашина</p>
+									<h2 class="coffemach__title">
+										La Cimbali<br>
+										M39 TE DOSATRON
+									</h2>
+									<p class="coffemach__price">3 570 грн</p>
+									<button class="btn">Характеристики</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="pager pager_2 flex">
+						<span class="pager__prev flex">
+							<img src="img/pager-next.png" alt="">
+						</span>
+						<span class="pager__number" title="1">1</span>
+						<span class="pager__number" title="2">2</span>
+						<span class="pager__number" title="3">3</span>
+						<span class="pager__number" title="4">4</span>
+						<span class="pager__dots">...</span>
+						<span class="pager__number" title="15">15</span>
+						<span class="pager__next flex">
+							<img src="img/pager-next.png" alt="">
+						</span>
+					</div>
+				</div>
 			</div>
 		</div>
 		<!--Modal window-->
