--- a/zernovarka/testimonials.html
+++ b/zernovarka/testimonials.html
@@ -21,7 +21,7 @@
 	<main class="content">		
 		<div class="title_page">
 			<div class="wrapper">
-				<h2>Технические схемы</h2>
+				<h2>Отзывы наших покупателей</h2>
 			</div>
 		</div>
 		<div class="testimonials">
@@ -160,6 +160,7 @@
 						</div>
 					</div>
 				</div>
+				<button class="btn btn_testim">больше отзывов</button>
 			</div>
 		</div>
 		<!--Modal window-->
