--- a/zernovarka/basket.html
+++ b/zernovarka/basket.html
@@ -95,7 +95,7 @@
 							</div>
 						</div>	
 						<div class="basket__col basket__col_6">
-							<img class="basket__remove" src="img/cart.png" alt="">
+							<img class="basket__remove retina-img" src="img/cart.png" alt="">
 						</div>
 					</div>
 					<div class="basket__row flex">
@@ -127,7 +127,7 @@
 							</div>
 						</div>	
 						<div class="basket__col basket__col_6">
-							<img class="basket__remove" src="img/cart.png" alt="">
+							<img class="basket__remove retina-img" src="img/cart.png" alt="">
 						</div>
 					</div>
 					<div class="basket__row flex">
@@ -159,7 +159,7 @@
 							</div>
 						</div>	
 						<div class="basket__col basket__col_6">
-							<img class="basket__remove" src="img/cart.png" alt="">
+							<img class="basket__remove retina-img" src="img/cart.png" alt="">
 						</div>
 					</div>
 					<div class="basket__row basket__row_total flex">
@@ -167,7 +167,7 @@
 						<div class="basket__cont flex">
 							<div class="basket__discount flex">
 								<input type="text" placeholder="Код на скидку">
-								<img src="img/discount.png" alt="">
+								<img class="retina-img" src="img/discount.png" alt="">
 							</div>
 							<div class="basket__box basket__box_center">
 								<h2>Ваша скидка</h2>
@@ -490,9 +490,9 @@
 					<div class="header__sort header__toggle flex">
 						<span class="active">по коду товара</span>
 						<span>по названию</span>
-						<img class="header__more" src="img/arrow-r.png" alt="">
+						<img class="header__more retina-img" src="img/arrow-r.png" alt="">
 					</div>
-					<img class="toggle" src="img/search.png" alt="">
+					<img class="toggle retina-img" src="img/search.png" alt="">
 				</div>
 			</div>
 		</div>	
