--- a/zernovarka/mainnav.html
+++ b/zernovarka/mainnav.html
@@ -882,9 +882,9 @@
 					<div class="header__sort header__toggle flex">
 						<span class="active">по коду товара</span>
 						<span>по названию</span>
-						<img class="header__more" src="img/arrow-r.png" alt="">
+						<img class="header__more retina-img" src="img/arrow-r.png" alt="">
 					</div>
-					<img class="toggle" src="img/search.png" alt="">
+					<img class="toggle retina-img" src="img/search.png" alt="">
 				</div>
 			</div>
 		</div>	
