--- a/zernovarka/info1.html
+++ b/zernovarka/info1.html
@@ -34,15 +34,15 @@
 					</div>
 					<div class="about__tabs">
 						<div class="adva__item flex">
-							<img src="img/adva1.png" alt="">
+							<img class="retina-img" src="img/adva1.png" alt="">
 							<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
 						</div>
 						<div class="adva__item flex">
-							<img src="img/adva2.png" alt="">
+							<img class="retina-img" src="img/adva2.png" alt="">
 							<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
 						</div>
 						<div class="adva__item flex">
-							<img src="img/adva3.png" alt="">
+							<img class="retina-img" src="img/adva3.png" alt="">
 							<p class="adva__text">Lorem ipsum dolor sit amet, <br>consectetur adipisicing elit, sed do<br> eiusmod tempor incididunt ut labore</p>
 						</div>
 					</div>
@@ -271,9 +271,9 @@
 					<div class="header__sort header__toggle flex">
 						<span class="active">по коду товара</span>
 						<span>по названию</span>
-						<img class="header__more" src="img/arrow-r.png" alt="">
+						<img class="header__more retina-img" src="img/arrow-r.png" alt="">
 					</div>
-					<img class="toggle" src="img/search.png" alt="">
+					<img class="toggle retina-img" src="img/search.png" alt="">
 				</div>
 			</div>
 		</div>	
